implement signup and login endpoint

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_STRAPIURL_DEV=http://localhost:1337
-REACT_APP_STRAPIURL_PROD=https://chima-blog-and-store-backend.onrender.com
+REACT_APP_URL_DEV=http://localhost:8000
+REACT_APP_URL_PROD=https://bsshome.onrender.com
